@@ -1,3 +1,8 @@
+2003-01-12
+----------
+* compatibility with gedafe 1.0 combos if you set 'gedafe_compat' to '1.0'
+  in Start();
+
 2002-12-22
 ----------
 * added multiple choice of export data formats, depending on auto-detected
